--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -2,42 +2,90 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert New Character</title>
+<link th:rel="stylesheet"
+	th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css} " />
 </head>
 <body>
 	<form th:object="${newPlayer}" th:action="@{/inputPlayer}"
 		method='POST'>
-		Player Name: <input name="playerName" size="20"
-			th:field="*{playerName}">
-		<br /> Character Name: <input name="characterName" size="20"
-			th:field="*{characterName}">
-		<br />
-		Total Hit Points: <input name="totalHitPoints" size="6"
-			th:field="*{totalHitPoints}">
-		<br /> Current Hit Points: <input name="currentHitPoints" size="6"
-			th:field="*{currentHitPoints}">
-		<br /> Hit Damage: <input name="hitDamage" size="6"
-			th:field="*{hitDamage}">
-		<br /> Strength: <input name="attributes.strength" size="2"
-			th:field="*{attributes.strength}">
-		<br /> Intelligence: <input name="attributes.intelligence" size="2"
-			th:field="*{attributes.intelligence}">
-		<br /> Wisdom: <input name="attributes.wisdom" size="2"
-			th:field="*{attributes.wisdom}">
-		<br /> Dexterity: <input name="attributes.dexterity" size="2"
-			th:field="*{attributes.dexterity}">
-		<br /> Constitution: <input name="attributes.constitution" size="2"
-			th:field="*{attributes.constitution}">
-		<br /> Charisma: <input name="attributes.charisma" size="2"
-			th:field="*{attributes.charisma}">
-		<br /> Item Name: <input name="item.name" size="20"
-			th:field="*{item.name}">
-		<br /> Item Description: <input name="item.description" size="10"
-			th:field="*{item.description}">
-		<br /> Item Current State: <input name="item.state" size="10"
-			th:field="*{item.state}">
-		<br />
-		<input name="submit" type="submit" value="submit" />
-		</form>
-		<a href="viewAll">View all Characters</a>
+		<div class="form-group col-4">
+			<label for="playerName">Player Name</label> <input type="text"
+				class="form-control" id="playerName" name="playerName" size="20"
+				th:field="*{playerName}">
+		</div>
+		<div class="form-group col-4">
+			<label for="characterName">Character Name</label> <input type="text"
+				class="form-control" id="characterName" name="characterName"
+				size="20" th:field="*{characterName}">
+		</div>
+		<div class="form-group col-4">
+			<label for="totalHitPoints">Total Hit Points</label> <input
+				type="text" class="form-control" id="totalHitPoints"
+				name="totalHitPoints" size="6" th:field="*{totalHitPoints}">
+		</div>
+		<div class="form-group col-4">
+			<label for="currentHitPoints">Current Hit Points</label> <input
+				type="text" class="form-control" id="currentHitPoints"
+				name="currentHitPoints" size="6" th:field="*{currentHitPoints}">
+		</div>
+		<div class="form-group col-4">
+			<label for="hitDamage">Hit Damage</label> <input type="text"
+				class="form-control" id="hitDamage" name="hitDamage" size="6"
+				th:field="*{hitDamage}">
+		</div>
+		<div class="form-group col-4">
+			<label for="attributes.strength">Strength</label> <input type="text"
+				class="form-control" id="attributes.strength"
+				name="attributes.strength" size="2"
+				th:field="*{attributes.strength}">
+		</div>
+		<div class="form-group col-4">
+			<label for="attributes.intelligence">Intelligence</label> <input
+				type="text" class="form-control" id="attributes.intelligence"
+				name="attributes.intelligence" size="2"
+				th:field="*{attributes.intelligence}">
+		</div>
+		<div class="form-group col-4">
+			<label for="attributes.wisdom">Wisdom</label> <input type="text"
+				class="form-control" id="attributes.wisdom" name="attributes.wisdom"
+				size="2" th:field="*{attributes.wisdom}">
+		</div>
+		<div class="form-group col-4">
+			<label for="attributes.dexterity">Dexterity</label> <input
+				type="text" class="form-control" id="attributes.dexterity"
+				name="attributes.dexterity" size="2"
+				th:field="*{attributes.dexterity}">
+		</div>
+		<div class="form-group col-4">
+			<label for="attributes.constitution">Constitution</label> <input
+				type="text" class="form-control" id="attributes.constitution"
+				name="attributes.constitution" size="2"
+				th:field="*{attributes.constitution}">
+		</div>
+		<div class="form-group col-4">
+			<label for="attributes.charisma">Charisma</label> <input type="text"
+				class="form-control" id="attributes.charisma"
+				name="attributes.charisma" size="2"
+				th:field="*{attributes.charisma}">
+		</div>
+		<div class="form-group col-4">
+			<label for="item.name">Item Name</label> <input type="text"
+				class="form-control" id="item.name" name="item.name" size="20"
+				th:field="*{item.name}">
+		</div>
+		<div class="form-group col-4">
+			<label for="item.description">Item Description</label> <input
+				type="text" class="form-control" id="item.description"
+				name="item.description" size="40" th:field="*{item.description}">
+		</div>
+		<div class="form-group col-4">
+			<label for="item.state">Item Current State</label> <input type="text"
+				class="form-control" id="item.state" name="item.state" size="15"
+				th:field="*{item.state}">
+		</div>
+		<button type="submit" class="btn btn-primary">Create
+			Character</button>
+	</form>
+	<a href="viewAll">View all Characters</a>
 </body>
 </html>
